# WeaMind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.en.md  README.md  TEST-Coverage-Improvement-Record.md  alembic.ini  bandit.yaml  conftest.py  db talk.md  debug-token-issue.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/: codecov.yml  copilot-instructions.md  dependabot.yml  release.yml
.github/codeql/: codeql-config.yml
.github/instructions/: changelog.instructions.md  docstring.instructions.md  migrations.instructions.md  testing-execution.instructions.md  testing-fixtures.instructions.md  testing-functions.instructions.md  testing-guidelines.instructions.md  testing-guidelines.md
.github/prompts/: arch.prompt.md  changelog.prompt.md  cli-best-practices.prompt.md  cspell.prompt.md  docstring-guidelines.prompt.md  docstring.prompt.md  fix-action-error.prompt.md  generate-todo.prompt.md  github-action-sha.prompt.md  github-maintenance.prompt.md  migrations.prompt.md  rich-menu.prompt.md  todo.prompt.md
.github/workflows/: auto-release.yml  check-pip-audit-ignores.yml  ci.yml  codeql-analysis.yml  codeql.yml  publish-ghcr.yml  publish-release.yml  sonarcloud.yml
app/: main.py
app/core/: admin_divisions.py  auth.py  config.py  database.py  logging.py  processing_lock.py
app/line/: __init__.py  messaging.py  metrics.py  postback.py  router.py  schemas.py  service.py  utils.py
app/user/: __init__.py  constants.py  models.py  router.py  schemas.py  service.py  utils.py
app/weather/: models.py  service.py
blogs/: README.md
docs/: AGENT-JWT-Verification.md  AGENT-Rate-Limiting-Processing-Lock.md  AGENT-announcements-system-spec.md  AGENT-current-location-weather-feature.md  AGENT-migrate-tests-to-postgresql.md  Architecture-Code.md  Architecture.md  CODE-REVIEW-GPS-vs-ADDRESS-DISCUSSION.md  ChatGPT-Opinion.md  Config-Refactor-Simple.md  DEBUG-LINE-Invalid-Reply-Token-Debug-Report.md  DISCUSS-AI-Development-Dead-Code-Prevention.md  DISCUSS-location-data-handling-strategy.md  DISCUSSION-SUMMARY-location-strategy.md  DONE-2026-07-11-ci-yaml-maintenance.md  DONE-LIFF-Error-Handling-And-Stability-Improvements.md  DONE-LIFF-Location-Settings-Complete.md  DONE-LINE-ID-Token-Signature-and-Audience-Verification.md  DONE-Rich-Menu-Map-Query-UI-Text-Updates.md  DONE-User-API-Security-Optimization-Implementation-Record.md  DONE-ghcr-automated-publishing.md  DONE-user-query-history.md  Deployment-Checklist.md  Discuss.md  Example.md  FIX-LIFF-Location-Settings-Authentication-Cache-Issues.md  FUTURE-LIFF-SDK-Integrity-Automation.md  Git-Worktree-Usage.md  IMPLEMENTATION-COMPLETE-location-strategy.md  IMPLEMENTATION-announcements-system.md  IMPLEMENTATION-current-location-weather.md  JWT-Security-Assessment.md  LIFF-Auto-Login-Select-Issue.md  LIFF-Development-Summary.md  LIFF-Location-Settings-Implementation.md  LIFF-Version-Control-Guide.md  Large-Files-Analysis.md  Location-Input-Parsing-Implementation.md  Others-spec.md  Quick-Reply-Implementation.md  (+18 more)
docs/archive/: DONE-weather-data-freshness-check-implementation.md  README-Enhancement-Session.md
docs/changelog/: AI-Agent-Guide.md  Implementation-Report.md  MEMORY-HOOK.md  README.md  ask-page-repo-CHANGELOG.md
docs/fast_ack/: DEBUG-LINE-Invalid-Reply-Token-Debug-Report.md  FAST-ACK-LINE-Webhook.md
docs/ghcr/: DONE-docker-image-tag-strategy.md  DONE-weamind-release-to-infra-pr-cd.md  DONE-workflow-run-head-sha-tag-traceability.md  DONE-workflow-run-security-false-positive.md  docker-env-security-guide.md
docs/rate_limiter/: AGENT-Rate-Limiting-Processing-Lock.md  AGENT-Redis-Lock-1sec-Timeout-Optimization.md  DISCUSS-Rate-Limiting-and-Redis-for-LINE-Webhook.md  DONE-LINE-Webhook-Processing-Lock-Implementation.md  DONE-Redis-Lock-1sec-Timeout-Implementation.md  PLAN-Prometheus-User-Monitoring-Strategy.md  Redis-Distributed-Lock-Tutorial.md
docs/rich_menu/: README.md  implementation-plan.md  preview.html  rich_menu_config.json
docs/security-scan/: implementation-highlights.md  makefile-commands-guide.md  security-scan.md  virtualenv-security-fix-and-dependabot-analysis.md
docs/seed/: DONE-LIFF-Location-Settings-Complete.md  Security-Assessment-and-Checklist.md
docs/wea_data/: AGENT-post-data-fetching-logic.md  AGENT-pre-preparation.md  DONE-import-reorganization-test-location-service.md  task-table-implementation.md  weather-query-logic.md  weather-schema-design-analysis.md
docs/weamind-infra/: PROGRESS.md  README.en.md  README.md
migrations/: env.py
migrations/versions/: 1a4a3abc97f6_add_task_table_for_wea_data_monitoring.py  526d69e2321e_restrict_wea_bot_weather_permissions.py  67c6acf6e8df_setup_database_permissions.py  69db147baaec_grant_location_insert_update_.py  7f11c9b6d545_feature_liff_location_settings_20250816_.py  8ef96c483fc9_setup_task_table_permissions.py  8fda37b4a59c_optimize_weather_table_indexes.py  b05ddf47e04e_create_user_table.py  bcec2f9b0ea0_remove_user_display_name.py  cdb5dd844b83_feature_user_query_history_20250824_.py  d2d7367827f4_remove_weather_created_updated_timestamps.py  f557a1959851_create_location_weather_tables.py
scripts/: changelog.sh  check_liff_health.sh  check_pip_audit_ignores.py  clean_docs.sh  export_branch_docs.sh  gen_tree.sh  open_infra_version_pr.sh  performance_test.py  rich_menu_manager.py  sync_instructions.sh  update_liff_version.sh  update_static_pages_version.sh  worktree_add.sh  worktree_clean.sh  worktree_list.sh  worktree_remove.sh
static/: announcements.json
static/about/: index.html
static/announcements/: index.html
static/data/: tw_admin_divisions.json
static/help/: index.html
tests/: conftest.py  test_api.py  test_line.py  test_main.py
tests/core/: conftest.py  test_admin_divisions.py  test_auth.py  test_auth_id_token_lightweight.py  test_auth_id_token_signature.py  test_config.py  test_log_config.py  (+2 more)
(+20 files in other folders)
